apps/20-media/sabnzbd/overlays/test/http-redirect.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
