apps/20-media/sabnzbd/overlays/test/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging # Keep staging for test
    traefik.ingress.kubernetes.io/router.entrypoints: "web, websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "media-redirect-to-https@kubernetescrd"
spec:
  ingressClassName: traefik
  rules:
    - host: "sabnzbd.test.truxonline.com" # Adjusted for test environment
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sabnzbd
                port:
                  number: 8080
  tls:
    - hosts:
        - "sabnzbd.test.truxonline.com"
      secretName: sabnzbd-tls
